--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/serve-static": "^2.2.2",
+    "@sendgrid/mail": "^7.6.2",
     "@types/graphql-upload": "^8.0.7",
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
