--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foyir-server",
   "private": true,
-  "version": "1.4.8",
+  "version": "1.6.6",
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "engines": {
@@ -11,6 +11,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "seed": "node dist/seed.js",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -32,6 +33,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/serve-static": "^2.2.2",
+    "@sendgrid/mail": "^7.6.2",
     "@types/graphql-upload": "^8.0.7",
     "apollo-server-express": "^3.3.0",
     "aws-sdk": "^2.1028.0",
@@ -45,7 +47,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.3.0"
+    "rxjs": "^7.3.0",
+    "stripe": "^8.205.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
